proj1/tests/correct/indents.py
def f(n):
          g = 1
	  g = g + n
  	  return g

print f(12),
