proj1/tests/error/break_outside.py
def f(n):
	while 1:
		y = 1
	break
